--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
                 <p>Participated in National level quiz competiton on Official Statistics conducted by Central Government of India in Vijayawada</p>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>Earned 5 star Bage in Hackerrank</h3>
+                <p> Earned a bage of 5 star in C language in Hackerrank</p>
+            </div>
+        </div>
 
     </div>
 
